# mindmap

./: .gitignore  AGENTS.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
docs/: project_plan.md
e2e/: mindmap.spec.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: clipboard.test.ts  clipboard.ts  diagnostics.ts  document.test.ts  document.ts  history.test.ts  history.ts  model.ts  normalizer.test.ts  normalizer.ts  parser.test.ts  parser.ts  recentFiles.test.ts  recentFiles.ts  serializer.ts  tree.test.ts  tree.ts  viewState.test.ts  viewState.ts  workspace.test.ts  workspace.ts
src/platform/: native.ts
src/ui/: App.tsx  inlineMarkdown.test.tsx  inlineMarkdown.tsx  keyboard.test.ts  keyboard.ts  nodeSizing.test.ts  nodeSizing.ts  styles.css
