[package]
name = "mindmap"
version = "0.1.0"
description = "Keyboard-centered Markdown mindmap"
authors = ["kw"]
edition = "2021"

[lib]
name = "mindmap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
tempfile = "3"
